--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- For Resposive Device -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>BizPro || Responsive html5 template</title>
+		<title>Súil Eile || Home</title>
 
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
@@ -113,7 +113,7 @@
 										data-splitout="none" 
 										data-responsive_offset="on" 
 										style="z-index: 6; white-space: nowrap;">
-										<h1>HELLO WE'RE BizPro</h1>
+										<h1>Hello, i'm Ciara</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -198,7 +198,8 @@
 										data-splitout="none" 
 										data-responsive_offset="on" 
 										style="z-index: 6; white-space: nowrap;">
-										<h1>HELLO WE'RE BizPro</h1>
+										<img src=""></img>
+										<!----<h1>HELLO WE'RE BizPro</h1>-->
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -999,17 +1000,17 @@
 									<li>
 										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
 										<h6>Address</h6>
-										<p>Freedom Way, Jersey City, NJ 07305, USA</p>
+										<p>Cork, Ireland</p>
 									</li>
 									<li>
 										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-phone" aria-hidden="true"></i></div>
 										<h6>Phone</h6>
-										<p>+88 01911854378</p>
+										<p>0892551404</p>
 									</li>
 									<li>
 										<div class="icon tran3s round-border p-color-bg"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
 										<h6>Email</h6>
-										<p>backpiper.com@gmail.com</p>
+										<p>newviewdesigns123@gmail.com</p>
 									</li>
 								</ul>
 							</div> <!-- /.left-side -->
@@ -1028,7 +1029,7 @@
 
 					<!-- Contact Form -->
 					<div class="send-message">
-						<h2>Send Message</h2>
+						<h2>I want to hear from you!</h2>
 
 						<form action="inc/sendemail.php" class="form-validation" autocomplete="off" method="post">
 							<div class="row">
