Removed redundant sections

--- a/index.html
+++ b/index.html
@@ -384,21 +384,24 @@
 				<div class="container">
 					<div class="theme-title">
 						<h2>A bit about me</h2>
-						<p>I've been studying Sustainable Horticulture and Permaculture for the past 3 years and am currently studying Horticultural therapy in Coventry University.  I love everything to do with nature and in my spare time I immerse myself in Spiritual Ecology training, practicing herbalism and doing as much gardening as I possibly can! Coming from and art and design background I have found a way to merge my horticultural academic and hands-on skills with my creative flair to produce beautiful garden designs.</p>
 					</div> <!-- /.theme-title -->
 
 					<div class="clear-fix team-member-wrapper">
-						<div class="float-left">
+						<div class="">
 							<div class="single-team-member">
 								<div class="img">
-									<img src="images/team/1.jpg" alt="Image">
-									<div class="opacity tran4s">
-										<h4>Gonzalez Gina</h4>
-										<span>Web Developer</span>
-										<p>On the other hand, We denounce ut with righteo indignation and dislike men who are so beguiled and demoralized.</p>
-									</div>
+									<img src="images/team/c1.jpg" alt="Image" style="display: block;
+									margin: auto;
+									border-radius: 100%;
+									height: 450px;
+									border: 5px solid #ff675b;">
+									<!---<div class="opacity tran4s">
+										<h4>Ciara Parsons</h4>
+										<span>Horticulturist</span>
+									</div>-->
 								</div> <!-- /.img -->
-								<div class="member-name">
+								<!--<div class="member-name" style="
+								    background: #e6e6e6;">
 									<h6>Gonzalez Gina</h6>
 									<p>Web Developer</p>
 									<ul>
@@ -407,43 +410,14 @@
 										<li><a href="#" class="tran3s round-border"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 										<li><a href="#" class="tran3s round-border"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 									</ul>
-								</div> <!-- /.member-name -->
-							</div> <!-- /.single-team-member -->
-						</div> <!-- /float-left -->
-
-						<div class="float-left">
-							<!----<div style="left: 270px; position: absolute; top: 108px; width: 440px; height: 440px;" data-exact-height="440" data-content-padding-horizontal="0" data-content-padding-vertical="0" title="" class="wp3" id="comp-jguzh702">
-								<div style="width: 440px; height: 440px;" id="comp-jguzh702link" class="wp3link">
-									<div data-style="" class="wp3img" id="comp-jguzh702img" style="position: relative; width: 440px; height: 440px;">
-										<img id="comp-jguzh702imgimage" alt="Hanging Plants " data-type="image" style="width: 440px; height: 440px; object-fit: cover;" src="https://static.wixstatic.com/media/0d5291_908a175b4c0f4cafa186c4b536ced53c~mv2.jpg/v1/fill/w_720,h_720,al_c,q_85/0d5291_908a175b4c0f4cafa186c4b536ced53c~mv2.webp" title="">
-									</div>
-								</div>
-							</div>-->
-						</div> <!-- /float-left -->
-
-						<div class="float-left">
-							<div class="single-team-member">
-								<div class="img">
-									<img src="images/team/3.jpg" alt="Image">
-									<div class="opacity tran4s">
-										<h4>Ramirez Minita</h4>
-										<span>Graphic Design</span>
-										<p>On the other hand, We denounce ut with righteo indignation and dislike men who are so beguiled and demoralized.</p>
-									</div>
-								</div> <!-- /.img -->
-								<div class="member-name">
-									<h6>Ramirez Minita</h6>
-									<p>Graphic Design</p>
-									<ul>
-										<li><a href="#" class="tran3s round-border"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#" class="tran3s round-border"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#" class="tran3s round-border"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-										<li><a href="#" class="tran3s round-border"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-									</ul>
-								</div> <!-- /.member-name -->
+								</div>-->
 							</div> <!-- /.single-team-member -->
 						</div> <!-- /float-left -->
 					</div> <!-- /.team-member-wrapper -->
+					<div class="theme-title" style="padding-bottom: 30px;">
+							
+							<p>I've been studying Sustainable Horticulture and Permaculture for the past 3 years and am currently studying Horticultural therapy in Coventry University.  I love everything to do with nature and in my spare time I immerse myself in Spiritual Ecology training, practicing herbalism and doing as much gardening as I possibly can! Coming from and art and design background I have found a way to merge my horticultural academic and hands-on skills with my creative flair to produce beautiful garden designs.</p>
+						</div> <!-- /.theme-title -->
 				</div> <!-- /.conatiner -->
 			</div> <!-- /#team-section -->
 
@@ -456,7 +430,7 @@
 				<div class="container">
 					<div class="theme-title">
 						<h2>SERVICES I PROVIDE</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
+						<p>Questions? Just ask!</p>
 					</div> <!-- /.theme-title -->
 
 					<div class="row">
